Fixed people spacing

--- a/people-page/styles04.css
+++ b/people-page/styles04.css
@@ -84,13 +84,8 @@ body {
   padding: 10px 18px;
   border-radius: 20px;
   box-shadow: 0, 5px, 30px, rgba(0, 0, 0, .50);
-  margin: 10px 0;
   cursor: pointer;
   transition: 0.25s;
-}
-
-#close {
-  margin-top: 0px;
 }
 
 #popup #close:hover,
@@ -155,8 +150,9 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 720px;
-  height: 450px;
+  height: auto;
   padding: 50px;
+  margin: 0;
   box-shadow: 0, 5px, 30px, rgba(0, 0, 0, .3);
   background-size: cover;
   border-radius: 20px;
@@ -252,7 +248,7 @@ body {
     padding: 50px 20px;
     background-position: center;
     height: fit-content;
-    width: 90%;
+    width: 80%;
   }
 
   #popup a,
